--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -1,10 +1,10 @@
 <head>
   <style> body { margin: 0; } </style>
 
-  <script src="//unpkg.com/three@0.94"></script>
+  <script src="//unpkg.com/three"></script>
   <script src="//unpkg.com/three-trackballcontrols-web/dist/three-trackballcontrols.min.js"></script>
-  <!--<script src="//unpkg.com/three-globe"></script>-->
-  <script src="../../dist/three-globe.js"></script>
+  <script src="//unpkg.com/three-globe"></script>
+  <!--<script src="../../dist/three-globe.js"></script>-->
 </head>
 
 <body>
@@ -16,13 +16,15 @@
     const gData = [...Array(N).keys()].map(() => ({
       lat: (Math.random() - 0.5) * 180,
       lng: (Math.random() - 0.5) * 360,
-      size: Math.random() / 10,
-      color: 'red'
+      size: Math.random() / 3,
+      color: ['red', 'white', 'blue', 'green'][Math.round(Math.random() * 3)]
     }));
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('./world.jpg')
-      .pointsData(gData);
+      .globeImageUrl('//vasturiano.github.io/three-globe/example/world.jpg')
+      .pointsData(gData)
+      .pointHeight('size')
+      .pointColor('color');
 
     // Setup renderer
     const renderer = new THREE.WebGLRenderer();
@@ -45,8 +47,6 @@
 
     // Kick-off renderer
     (function animate() { // IIFE
-//      Globe.tickFrame();
-
       // Frame cycle
       tbControls.update();
       renderer.render(scene, camera);
