--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -21,7 +21,7 @@
     }));
 
     const Globe = new ThreeGlobe()
-      .globeImageUrl('//vasturiano.github.io/three-globe/example/world.jpg')
+      .globeImageUrl('//unpkg.com/three-globe/example/world.jpg')
       .pointsData(gData)
       .pointHeight('size')
       .pointColor('color');
