--- a/example/links/index.html
+++ b/example/links/index.html
@@ -3,8 +3,8 @@
 
   <script src="//unpkg.com/three"></script>
   <script src="//unpkg.com/three-trackballcontrols-web/dist/three-trackballcontrols.min.js"></script>
-  <!--<script src="//unpkg.com/three-globe"></script>-->
-  <script src="../../dist/three-globe.js"></script>
+  <script src="//unpkg.com/three-globe"></script>
+  <!--<script src="../../dist/three-globe.js"></script>-->
 </head>
 
 <body>
@@ -13,32 +13,20 @@
   <script>
     // Gen random data
     const N = 30;
-    const gData = [...Array(N).keys()].map(() => ({
-      lat: (Math.random() - 0.5) * 180,
-      lng: (Math.random() - 0.5) * 360,
-      size: Math.random() / 3,
-      color: ['red', 'white', 'blue', 'green'][Math.round(Math.random() * 3)]
-    }));
 
     const linksData = [...Array(N).keys()].map(() => ({
       startLat: (Math.random() - 0.5) * 180,
       startLng: (Math.random() - 0.5) * 360,
       endLat: (Math.random() - 0.5) * 180,
       endLng: (Math.random() - 0.5) * 360,
-      height: Math.random() / 3,
-      diameter: Math.random() / 10,
+      height: Math.random(),
       color: ['red', 'white', 'blue', 'green'][Math.round(Math.random() * 3)]
     }));
 
     const Globe = new ThreeGlobe()
       .globeImageUrl('//unpkg.com/three-globe/example/world.jpg')
-      .pointsData(gData)
-      .pointHeight('size')
-      .pointColor('color')
       .linksData(linksData)
       .linkHeight('height')
-      .linkDiameter('linkDiameter')
-      .linksMerge(true)
       .linkColor('color');
 
     // Setup renderer
