--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -44,6 +44,9 @@
 
     // Add camera controls
     const tbControls = new TrackballControls(camera, renderer.domElement);
+    tbControls.minDistance = 101;
+    tbControls.rotateSpeed = 5;
+    tbControls.zoomSpeed = 0.8;
 
     // Kick-off renderer
     (function animate() { // IIFE
