Fix example prop

--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -23,7 +23,7 @@
     const Globe = new ThreeGlobe()
       .globeImageUrl('//unpkg.com/three-globe/example/world.jpg')
       .pointsData(gData)
-      .pointHeight('size')
+      .pointAltitude('size')
       .pointColor('color');
 
     // Setup renderer
