--- a/example/links/index.html
+++ b/example/links/index.html
@@ -36,6 +36,7 @@
     const scene = new THREE.Scene();
     scene.add(Globe);
     scene.add(new THREE.AmbientLight(0xbbbbbb));
+    scene.add(new THREE.DirectionalLight(0xffffff, 0.6));
 
     // Setup camera
     const camera = new THREE.PerspectiveCamera();
