Set animateIn default

--- a/example/basic/index.html
+++ b/example/basic/index.html
@@ -20,7 +20,7 @@
       color: ['red', 'white', 'blue', 'green'][Math.round(Math.random() * 3)]
     }));
 
-    const Globe = new ThreeGlobe({ animateIn: true })
+    const Globe = new ThreeGlobe()
       .globeImageUrl('//unpkg.com/three-globe/example/world.jpg')
       // .globeImageUrl('//unpkg.com/three-globe/example/blue-marble.jpg')
       .bumpImageUrl('//unpkg.com/three-globe/example/earth-elevation.png')
