--- a/example/submarine-cables/index.html
+++ b/example/submarine-cables/index.html
@@ -3,8 +3,8 @@
 
   <script src="//unpkg.com/three"></script>
   <script src="//unpkg.com/three-trackballcontrols-web/dist/three-trackballcontrols.min.js"></script>
-  <!--<script src="//unpkg.com/three-globe"></script>-->
-  <script src="../../dist/three-globe.js"></script>
+  <script src="//unpkg.com/three-globe"></script>
+  <!--<script src="../../dist/three-globe.js"></script>-->
 </head>
 
 <body>
