Update urls of controls to three built-in

--- a/example/hexed-polygons/index.html
+++ b/example/hexed-polygons/index.html
@@ -2,7 +2,7 @@
   <style> body { margin: 0; } </style>
 
   <script src="//unpkg.com/three"></script>
-  <script src="//unpkg.com/three-trackballcontrols-web/dist/three-trackballcontrols.min.js"></script>
+  <script src="//unpkg.com/three/examples/js/controls/TrackballControls.js"></script>
   <script src="//unpkg.com/three-globe"></script>
   <!--<script src="../../dist/three-globe.js"></script>-->
 </head>
@@ -38,7 +38,7 @@
     camera.position.z = 500;
 
     // Add camera controls
-    const tbControls = new TrackballControls(camera, renderer.domElement);
+    const tbControls = new THREE.TrackballControls(camera, renderer.domElement);
     tbControls.minDistance = 101;
     tbControls.rotateSpeed = 5;
     tbControls.zoomSpeed = 0.8;
