Exclude antarctica from example

--- a/example/country-polygons/index.html
+++ b/example/country-polygons/index.html
@@ -15,7 +15,7 @@
   {
     const Globe = new ThreeGlobe()
       .globeImageUrl('//unpkg.com/three-globe/example/img/earth-dark.jpg')
-      .polygonsData(countries.features)
+      .polygonsData(countries.features.filter(d => d.properties.ISO_A2 !== 'AQ'))
       .polygonCapColor(() => 'rgba(200, 0, 0, 0.7)')
       .polygonSideColor(() => 'rgba(0, 200, 0, 0.1)')
       .polygonStrokeColor(() => '#111');
