Pin three version in examples to 0.124 until Geometry issue fixed

--- a/example/custom-material/index.html
+++ b/example/custom-material/index.html
@@ -1,7 +1,7 @@
 <head>
   <style> body { margin: 0; } </style>
 
-  <script src="//unpkg.com/three"></script>
+  <script src="//unpkg.com/three@0.124"></script>
   <script src="//unpkg.com/three/examples/js/controls/TrackballControls.js"></script>
 
   <script src="//unpkg.com/three-globe"></script>
