Fix #21. Remove all dependencies of Geometry and add compatibility with Three 0.125.

--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -13,7 +13,7 @@
     }
   </style>
 
-  <script src="//unpkg.com/three@0.124"></script>
+  <script src="//unpkg.com/three"></script>
   <script src="//unpkg.com/three/examples/js/controls/TrackballControls.js"></script>
   <script src="//unpkg.com/three-globe"></script>
 <!--  <script src="../../dist/three-globe.js"></script>-->
