--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -45,7 +45,7 @@
       .objectAltitude('alt')
       .objectThreeObject(() => new THREE.Mesh(satGeometry, satMaterial));
 
-    fetch('./_space-track-leo.txt').then(r => r.text()).then(rawData => {
+    fetch('./space-track-leo.txt').then(r => r.text()).then(rawData => {
       const tleData = rawData.split('\n0').map(tle => tle.split('\n'));
       const satData = tleData.map(([name, ...tle]) => ({
         satrec: satellite.twoline2satrec(...tle),
