--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -29,8 +29,8 @@
 
   <script>
     const EARTH_RADIUS_KM = 6371; // km
-    const SAT_SIZE = 85; // km
-    const TIME_STEP = 4 * 1000; // per frame
+    const SAT_SIZE = 80; // km
+    const TIME_STEP = 3 * 1000; // per frame
 
     const timeLogger = document.getElementById('time-log');
 
@@ -45,10 +45,10 @@
     Globe.objectThreeObject(() => new THREE.Mesh(satGeometry, satMaterial));
 
     fetch('./space-track-leo.txt').then(r => r.text()).then(rawData => {
-      const tleData = rawData.split('\n0').map(tle => tle.split('\n'));
+      const tleData = rawData.replace(/\r/g, '').split(/\n(?=[^12])/).map(tle => tle.split('\n'));
       const satData = tleData.map(([name, ...tle]) => ({
         satrec: satellite.twoline2satrec(...tle),
-        name: name.split(' ').slice(1).join(' '),
+        name: name.trim().replace(/^0 /, '')
       }));
 
       // time ticker
