--- a/example/labels/index.html
+++ b/example/labels/index.html
@@ -2,7 +2,6 @@
   <style> body { margin: 0; } </style>
 
   <script src="//unpkg.com/three"></script>
-  <script src="//unpkg.com/three/examples/js/controls/TrackballControls.js"></script>
   <script src="//unpkg.com/three-globe"></script>
   <!--<script src="../../dist/three-globe.js"></script>-->
 </head>
@@ -10,7 +9,11 @@
 <body>
   <div id="globeViz"></div>
 
-  <script>
+  <script type="importmap">{ "imports": { "three": "https://unpkg.com/three/build/three.module.js" }}</script>
+  <script type="module">
+    import { TrackballControls } from '//unpkg.com/three/examples/jsm/controls/TrackballControls.js';
+    Object.assign(THREE , { TrackballControls });
+
     // Gen random data
     const N = 50;
     const gData = [...Array(N).keys()].map(() => ({
