--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -18,7 +18,6 @@
   <script src="//unpkg.com/satellite.js/dist/satellite.min.js"></script>
 
   <script src="//unpkg.com/three"></script>
-  <script src="//unpkg.com/three/examples/js/controls/TrackballControls.js"></script>
   <script src="//unpkg.com/three-globe"></script>
 <!--  <script src="../../dist/three-globe.js"></script>-->
 </head>
@@ -27,7 +26,11 @@
   <div id="globeViz"></div>
   <div id="time-log"></div>
 
-  <script>
+  <script type="importmap">{ "imports": { "three": "https://unpkg.com/three/build/three.module.js" }}</script>
+  <script type="module">
+    import { TrackballControls } from '//unpkg.com/three/examples/jsm/controls/TrackballControls.js';
+    Object.assign(THREE , { TrackballControls });
+
     const EARTH_RADIUS_KM = 6371; // km
     const SAT_SIZE = 80; // km
     const TIME_STEP = 3 * 1000; // per frame
