--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -14,7 +14,6 @@
   </style>
 
   <script src="//unpkg.com/three"></script>
-  <script src="//unpkg.com/three/examples/js/controls/TrackballControls.js"></script>
   <script src="//unpkg.com/three-globe"></script>
 <!--  <script src="../../dist/three-globe.js"></script>-->
 
@@ -26,7 +25,11 @@
 
 <div id="time"></div>
 
-<script>
+<script type="importmap">{ "imports": { "three": "https://unpkg.com/three/build/three.module.js" }}</script>
+<script type="module">
+  import { TrackballControls } from '//unpkg.com/three/examples/jsm/controls/TrackballControls.js';
+  Object.assign(THREE , { TrackballControls });
+
   const VELOCITY = 9; // minutes per frame
 
   const sunPosAt = dt => {
