--- a/example/tiles/index.html
+++ b/example/tiles/index.html
@@ -48,8 +48,8 @@
     // Setup scene
     const scene = new THREE.Scene();
     scene.add(Globe);
-    scene.add(new THREE.AmbientLight(0xcccccc));
-    scene.add(new THREE.DirectionalLight(0xffffff, 0.6));
+    scene.add(new THREE.AmbientLight(0xcccccc, Math.PI));
+    scene.add(new THREE.DirectionalLight(0xffffff, 0.6 * Math.PI));
 
     // Setup camera
     const camera = new THREE.PerspectiveCamera();
