Add ability to represent hexed polygons using dots

--- a/example/hexed-polygons/index.html
+++ b/example/hexed-polygons/index.html
@@ -21,6 +21,7 @@
       .hexPolygonsData(countries.features)
       .hexPolygonResolution(3)
       .hexPolygonMargin(0.3)
+      .hexPolygonUseDots(true)
       .hexPolygonColor(() => `#${Math.round(Math.random() * Math.pow(2, 24)).toString(16).padStart(6, '0')}`);
 
     // Setup renderer
