--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -13,9 +13,17 @@
     }
   </style>
 
-  <script src="//unpkg.com/three"></script>
-  <script src="//unpkg.com/three-globe"></script>
-<!--  <script src="../../dist/three-globe.js"></script>-->
+  <script type="importmap">{ "imports": {
+    "three": "//unpkg.com/three/build/three.module.js",
+    "three/addons/": "//unpkg.com/three/examples/jsm/"
+  }}</script>
+  <script type="module">
+    import * as THREE from '//unpkg.com/three/build/three.module.js';
+    window.THREE = THREE;
+  </script>
+
+  <script src="//unpkg.com/three-globe" defer></script>
+  <!--  <script src="../../dist/three-globe.js" defer></script>-->
 
   <script src="//unpkg.com/solar-calculator"></script>
 </head>
@@ -25,10 +33,8 @@
 
 <div id="time"></div>
 
-<script type="importmap">{ "imports": { "three": "https://unpkg.com/three/build/three.module.js" }}</script>
 <script type="module">
-  import { TrackballControls } from '//unpkg.com/three/examples/jsm/controls/TrackballControls.js';
-  Object.assign(THREE , { TrackballControls });
+  import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
 
   const VELOCITY = 9; // minutes per frame
 
@@ -84,7 +90,7 @@
   camera.position.z = 500;
 
   // Add camera controls
-  const tbControls = new THREE.TrackballControls(camera, renderer.domElement);
+  const tbControls = new TrackballControls(camera, renderer.domElement);
   tbControls.minDistance = 101;
   tbControls.rotateSpeed = 5;
   tbControls.zoomSpeed = 0.8;
