--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -16,8 +16,8 @@
   </style>
 
   <script type="importmap">{ "imports": {
-    "three": "//unpkg.com/three/build/three.module.js",
-    "three/addons/": "//unpkg.com/three/examples/jsm/"
+    "three": "https://esm.sh/three",
+    "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
   <script type="module">
     import * as THREE from 'three';
@@ -26,8 +26,6 @@
 
   <script src="//unpkg.com/three-globe" defer></script>
   <!--  <script src="../../dist/three-globe.js" defer></script>-->
-
-  <script src="//unpkg.com/satellite.js/dist/satellite.min.js"></script>
 </head>
 
 <body>
@@ -36,6 +34,7 @@
 
   <script type="module">
     import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
+    import * as satellite from 'https://esm.sh/satellite.js';
 
     const EARTH_RADIUS_KM = 6371; // km
     const SAT_SIZE = 80; // km
