--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -14,8 +14,8 @@
   </style>
 
   <script type="importmap">{ "imports": {
-    "three": "//unpkg.com/three/build/three.module.js",
-    "three/addons/": "//unpkg.com/three/examples/jsm/"
+    "three": "https://esm.sh/three",
+    "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
   <script type="module">
     import * as THREE from 'three';
