--- a/example/tiles/index.html
+++ b/example/tiles/index.html
@@ -2,8 +2,8 @@
   <style> body { margin: 0; } </style>
 
   <script type="importmap">{ "imports": {
-    "three": "//unpkg.com/three/build/three.module.js",
-    "three/addons/": "//unpkg.com/three/examples/jsm/"
+    "three": "https://esm.sh/three",
+    "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
   <script type="module">
     import * as THREE from 'three';
