Upd example import

--- a/example/custom-material/index.html
+++ b/example/custom-material/index.html
@@ -5,19 +5,17 @@
     "three": "https://esm.sh/three",
     "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
-  <script type="module">
-    import * as THREE from 'three';
-    window.THREE = THREE;
-  </script>
 
-  <script src="//unpkg.com/three-globe" defer></script>
-  <!--  <script src="../../dist/three-globe.js" defer></script>-->
+<!--  <script type="module"> import * as THREE from 'three'; window.THREE = THREE;</script>-->
+<!--  <script src="../../dist/three-globe.js" defer></script>-->
 </head>
 
 <body>
   <div id="globeViz"></div>
 
   <script type="module">
+    import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
+    import * as THREE from 'https://esm.sh/three';
     import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
 
     const Globe = new ThreeGlobe()
