--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -3,13 +3,9 @@
     "three": "https://esm.sh/three",
     "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
-  <script type="module">
-    import * as THREE from 'three';
-    window.THREE = THREE;
-  </script>
 
-  <script src="//unpkg.com/three-globe" defer></script>
-  <!--  <script src="../../dist/three-globe.js" defer></script>-->
+<!--  <script type="module"> import * as THREE from 'three'; window.THREE = THREE;</script>-->
+<!--  <script src="../../dist/three-globe.js" defer></script>-->
 
   <style>
     body {
@@ -32,6 +28,8 @@
   <div id="time"></div>
 
   <script type="module">
+    import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
+    import * as THREE from 'https://esm.sh/three';
     import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
     import * as solar from 'https://esm.sh/solar-calculator';
 
