--- a/example/tiles/index.html
+++ b/example/tiles/index.html
@@ -5,12 +5,8 @@
     "three": "https://esm.sh/three",
     "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
-  <script type="module">
-    import * as THREE from 'three';
-    window.THREE = THREE;
-  </script>
 
-  <script src="//unpkg.com/three-globe" defer></script>
+<!--  <script type="module"> import * as THREE from 'three'; window.THREE = THREE;</script>-->
 <!--  <script src="../../dist/three-globe.js" defer></script>-->
 </head>
 
@@ -18,6 +14,8 @@
   <div id="globeViz"></div>
 
   <script type="module">
+    import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
+    import * as THREE from 'https://esm.sh/three';
     import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
 
     const TILE_MARGIN = 0.35; // degrees
