Add external to example three/addons imports

--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -31,7 +31,7 @@
   <script type="module">
     import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
     import * as THREE from 'https://esm.sh/three';
-    import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
+    import { TrackballControls } from 'three/addons/controls/TrackballControls.js?external=three';
     import * as satellite from 'https://esm.sh/satellite.js';
 
     const EARTH_RADIUS_KM = 6371; // km
