--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -30,7 +30,7 @@
   <script type="module">
     import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
     import * as THREE from 'https://esm.sh/three';
-    import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
+    import { TrackballControls } from 'three/addons/controls/TrackballControls.js?external=three';
     import * as solar from 'https://esm.sh/solar-calculator';
 
     const VELOCITY = 9; // minutes per frame
