--- a/example/tiles/index.html
+++ b/example/tiles/index.html
@@ -16,7 +16,7 @@
   <script type="module">
     import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
     import * as THREE from 'https://esm.sh/three';
-    import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
+    import { TrackballControls } from 'three/addons/controls/TrackballControls.js?external=three';
 
     const TILE_MARGIN = 0.35; // degrees
 
