--- a/example/custom-material/index.html
+++ b/example/custom-material/index.html
@@ -16,7 +16,7 @@
   <script type="module">
     import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
     import * as THREE from 'https://esm.sh/three';
-    import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
+    import { TrackballControls } from 'three/addons/controls/TrackballControls.js?external=three';
 
     const Globe = new ThreeGlobe()
       .globeImageUrl('//unpkg.com/three-globe/example/img/earth-blue-marble.jpg')
