--- a/example/html-markers/index.html
+++ b/example/html-markers/index.html
@@ -16,8 +16,8 @@
   <script type="module">
     import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
     import * as THREE from 'https://esm.sh/three';
-    import { TrackballControls } from 'three/addons/controls/TrackballControls.js';
-    import { CSS2DRenderer } from 'three/addons/renderers/CSS2DRenderer.js';
+    import { TrackballControls } from 'three/addons/controls/TrackballControls.js?external=three';
+    import { CSS2DRenderer } from 'three/addons/renderers/CSS2DRenderer.js?external=three';
 
     const markerSvg = `<svg viewBox="-4 0 36 36">
       <path fill="currentColor" d="M14,0 C21.732,0 28,5.641 28,12.6 C28,23.963 14,36 14,36 C14,36 0,24.064 0,12.6 C0,5.641 6.268,0 14,0 Z"></path>
