--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -1,6 +1,7 @@
 <head>
   <script type="importmap">{ "imports": {
     "three": "https://esm.sh/three",
+    "three/": "https://esm.sh/three/",
     "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
 
