--- a/example/labels/index.html
+++ b/example/labels/index.html
@@ -3,6 +3,7 @@
 
   <script type="importmap">{ "imports": {
     "three": "https://esm.sh/three",
+    "three/": "https://esm.sh/three/",
     "three/addons/": "https://esm.sh/three/examples/jsm/"
   }}</script>
 
