Add native pixel ratio to examples

--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -88,6 +88,7 @@
     // Setup renderer
     const renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth, window.innerHeight);
+    renderer.setPixelRatio(window.devicePixelRatio);
     document.getElementById('globeViz').appendChild(renderer.domElement);
 
     // Setup scene
