Upd examples imports

--- a/example/paths/index.html
+++ b/example/paths/index.html
@@ -3,8 +3,7 @@
 
   <script type="importmap">{ "imports": {
     "three": "https://esm.sh/three",
-    "three/": "https://esm.sh/three/",
-    "three/addons/": "https://esm.sh/three/examples/jsm/"
+    "three/": "https://esm.sh/three/"
   }}</script>
 
 <!--  <script type="module"> import * as THREE from 'three'; window.THREE = THREE;</script>-->
@@ -17,7 +16,7 @@
   <script type="module">
     import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
     import * as THREE from 'https://esm.sh/three';
-    import { TrackballControls } from 'three/addons/controls/TrackballControls.js?external=three';
+    import { TrackballControls } from 'three/examples/jsm/controls/TrackballControls.js?external=three';
 
     // Gen random paths
     const N_PATHS = 10;
