--- a/example/satellites/index.html
+++ b/example/satellites/index.html
@@ -1,8 +1,7 @@
 <head>
   <script type="importmap">{ "imports": {
     "three": "https://esm.sh/three",
-    "three/": "https://esm.sh/three/",
-    "three/addons/": "https://esm.sh/three/examples/jsm/"
+    "three/": "https://esm.sh/three/"
   }}</script>
 
 <!--  <script type="module"> import * as THREE from 'three'; window.THREE = THREE;</script>-->
@@ -32,7 +31,7 @@
   <script type="module">
     import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
     import * as THREE from 'https://esm.sh/three';
-    import { TrackballControls } from 'three/addons/controls/TrackballControls.js?external=three';
+    import { TrackballControls } from 'three/examples/jsm/controls/TrackballControls.js?external=three';
     import * as satellite from 'https://esm.sh/satellite.js';
 
     const EARTH_RADIUS_KM = 6371; // km
