--- a/example/paths/index.html
+++ b/example/paths/index.html
@@ -3,7 +3,8 @@
 
   <script type="importmap">{ "imports": {
     "three": "https://esm.sh/three",
-    "three/": "https://esm.sh/three/"
+    "three/": "https://esm.sh/three/",
+    "taichi.js": "https://dev.jspm.io/taichi.js"
   }}</script>
 
 <!--  <script type="module"> import * as THREE from 'three'; window.THREE = THREE;</script>-->
@@ -14,7 +15,7 @@
   <div id="globeViz"></div>
 
   <script type="module">
-    import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
+    import ThreeGlobe from 'https://esm.sh/three-globe?external=three,taichi.js';
     import * as THREE from 'https://esm.sh/three';
     import { TrackballControls } from 'three/examples/jsm/controls/TrackballControls.js?external=three';
 
