--- a/example/solar-terminator/index.html
+++ b/example/solar-terminator/index.html
@@ -1,7 +1,8 @@
 <head>
   <script type="importmap">{ "imports": {
     "three": "https://esm.sh/three",
-    "three/": "https://esm.sh/three/"
+    "three/": "https://esm.sh/three/",
+    "taichi.js": "https://dev.jspm.io/taichi.js"
   }}</script>
 
 <!--  <script type="module"> import * as THREE from 'three'; window.THREE = THREE;</script>-->
@@ -28,7 +29,7 @@
   <div id="time"></div>
 
   <script type="module">
-    import ThreeGlobe from 'https://esm.sh/three-globe?external=three';
+    import ThreeGlobe from 'https://esm.sh/three-globe?external=three,taichi.js';
     import * as THREE from 'https://esm.sh/three';
     import { TrackballControls } from 'three/examples/jsm/controls/TrackballControls.js?external=three';
     import * as solar from 'https://esm.sh/solar-calculator';
